# sdna_plus

./: .gitignore  .readthedocs.yaml  BUILD.md  CMakeLists.txt  CMakePresets.json  Dockerfile.build  LICENSE.md  README.md  build_installer.proj  build_installer.vcproj  build_linux.sh  build_output.bat  build_output.proj  build_output_debug.bat  build_release.bat  configure_for_zig.bat  configure_output_build_system_with_CMake.bat  create_build_system_with_CMake.bat  create_installer_with_CMake.bat  create_installer_with_Visual_Studio_17_2022.bat  create_output_with_Zig.bat  create_version_generated.h.py  create_windows_wheel.bat  download_geos_c.dll.bat  getSdnaVersion.py  hatch_build.py  insert_sDNA_versions.py  insert_sDNA_versions_and_headers.py  package_release.bat  pyproject.toml  requirements-build-wheel.txt  requirements.txt  run_CMake_build_system.bat  run_CMake_output_build_system.bat  sDNA_install_steps.rtf  stub_vcpkg.sh  vcpkg-configuration.json  vcpkg.json  vcpkg.stub.cmake
.github/actions/run_regression_tests/: action.yml
.github/actions/run_regression_tests_without_pytest/: action.yml
.github/workflows/: build_geos.yml  build_installer_and_test.yml  build_installer_using_cmake_and_test.yml  build_installer_using_msbuild_and_VS_and_test.yml  build_linux_wheel.yml  build_linux_wheel_and_test.yml  build_output_with_zig_and_test.yml  build_windows_wheel_and_test.yml  cibuildwheels.yml  compile.yml  compile_and_test.yml  compile_dll_in_cmake.yml  compile_dll_in_cmake_and_test.yml  compile_dll_with_zig.yml  compile_dll_with_zig_and_test.yml  compile_so_with_gcc.yml  compile_so_with_zig.yml  debug_zig_windows.yml  diff_tests.yml  install_msi_from_releases_page.yml  run_diff_tests.yml  smoke_test_gcc.yml  test_Linux_OpenMP_build.yml  test_an_msi_from_the_releases_page.yml  test_sDNA_release.yml  try_to_compile_with_cmake.yml
arcscripts/: Rtest.py  __init__.py  __main__.py  arc_import_itn.py  arc_matchsymbologyranges.py  arc_utils.py  boxcox.R  boxtidwell.R  commandline_integral_prepare.py  devel_utils.py  environment_test.py  fcdiff.py  importmeridian.py  regtests.py  regularizedregression.R  runcalculation.py  runcalculation.py.bak  runsdnacommand.py  sDNA.pyt  sDNA.pyt.bak  sDNAUISpec.py  sDNAUISpec.py.bak  sdna_environment.py  sdna_environment.py.bak  sdnaexception.py  sdnapy.py  sdnapy.py.bak  sdnaregutilities.py  sdnaregutilities.py.bak  shp2txt.py
arcscripts/rportable/R-Portable/Data/settings/: R-PortableSettings.ini
autocadscripts/: colour.psd  convertunlinks.psd  integral.psd  load.psd  prepare.psd  sdnacolour.LSP  sdnaimportlinksunlinks.lsp  sdnaintegral.LSP  sdnaloaditn.LSP  sdnaprepare.lsp  utils.lsp
build_output_hatch/: CMakeCache.txt
build_output_hatch_windows/: CMakeCache.txt
docs/: node link explanation.pptx
docs/sphinx/source/: analysis-friendly.rst  analysis-spec.rst  conf.py  guide_to_individual_tools.rst  index.rst  installation_usage.rst  integral-advanced-config.csv  introduction.rst  network_preparation.rst  prepare-advanced-config.csv  preset-metric-vars.csv  requirements.txt  step_by_step_guides.rst
installerbits/: _parentdir.py  license.rtf  rename_version.py
installerbits/advanced/: readme.rtf  sdna.aip
installerbits/from_lawyers/: 09 12  2014 sDNA Freeware Licence CC.docx  gdpr.docx  sDNA+ Licence.docx
installerbits/from_lawyers/gdpr 2/: RE GDPR compliance for sDNA license.msg  license.rtf
output/Release/x64/: placeholder.txt
requirements/: R.txt  R_full.txt  R_minimal.txt  base.txt
sDNA/geos/: build.bat  build_geos_using_cmake.bat  build_in_ci_vs_2022.bat  print_geos_dll_version.py
sDNA/geos/drop/src/operation/valid/: ConnectedInteriorTester.cpp
sDNA/geos/drop/src/simplify/: TopologyPreservingSimplifier.cpp
sDNA/muparser/drop/src/: muParser.cpp  muParserBase.cpp  muParserBytecode.cpp  muParserCallback.cpp  muParserError.cpp  muParserTokenReader.cpp
sDNA/registersdna/: Module1.vb
sDNA/sDNAProgressBar/: sDNAProgressBar.vb
sDNA/sdna_vs2008/: CMakeLists.txt  CMakePresets.json  build.bat  calc_output_code.cpp  calculation.cpp  calculation.h  calculationbase.h  config_string_parser.h  create_build_system.bat  create_build_system_with_CMake.bat  dataacquisitionstrategy.h  dijkstra.cpp  dllmain.cpp  dummy_doxygen_containers.h  edge.cpp  edge.h  geos_sdna_wrapper.cpp  geos_sdna_wrapper.h  go.bat  interface_funcs.cpp  linkdatasource.h  metricevaluator.cpp  metricevaluator.h  net.cpp  net.h  point.h  prepareoperations.cpp  prepareoperations.h  prepend_with_include_stdafx.h.py  preppend_muparser_cpps_with_include_stdafx.h.py  random.cpp  random.h  run_CMake_build_system.bat  sDNACalculationFactory.cpp  sDNACalculationFactory.h  sdna.h  sdna_arrays.h  sdna_geometry_collections.cpp  sdna_geometry_collections.h  sdna_output_utils.h  (+17 more)
sDNA/sdna_vs2008/CMake/: Default.cmake  DefaultCXX.cmake
sDNA/sdna_vs2008/IteratorTypeErasure/any_iterator/detail/: any_iterator_metafunctions.hpp
sDNA/sdna_vs2008/tests/: 3d_test.py  arcscriptsdir.py  awkward_test.py  benchmark_dll.py  colourdiff.bat  colourdiff.py  compare_shp2txt - Copy.py  correctout.txt  correctout_geom.txt  correctout_od.txt  correctout_partial.txt  correctout_prep.txt  correctout_table.txt  debug_test.py  gdb_test.py  hybrid_correctout.txt  hybrid_test.py  load_library.py  mydiff.bat  partial_test.py  pause_debug_test.bat  prepare_barns_test.py  prepare_test_new.py  run_debug_test.bat  run_geom_test.bat  run_tests_windows.bat  shp2txt.py  structure_shp2txt_output.py  test_parallel_results.py  vtune.py  zonetesttableduplicate.csv
sDNA/sdna_vs2008/tests/pytest/: filter_out_debug_only_output.py  test_gathering_windows_command_line_tests.py
sDNA/sdna_vs2008/x64/Debug/: sdna_vs2008.exp  sdna_vs2008.lib
sDNA/sdnacomwrapper/: Calculation.cpp  Calculation.h  SDNAWindow.cpp  SDNAWindow.h  SpatialNet.cpp  SpatialNet.h  dllmain.cpp  dllmain.h  globalwindow.cpp  globalwindow.h  sdnacomwrapper.cpp  sdnacomwrapper.idl  sdnacomwrapper.vcproj  stdafx.cpp  stdafx.h  utils.cpp  utils.h
zigcross-cmake/: zig-toolchain-aarch64.cmake
