[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "sDNA_plus"
version = "5.0.0"
authors = [ {name = 'Crispin Cooper', email = 'sdna@cardiff.ac.uk'}, {name = "James Parrott", email = "james.parrott@proton.me"}]
description = "sDNA is a world leading tool for Spatial Design Network Analysis.  "
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3"
keywords = ["GIS", "Spatial Networks", "Urban planning"]
license = {file = "LICENSE.md"}
classifiers = [
    "Programming Language :: Python",
]
dependencies = [
    "PyShp==2.1.0",
]

[project.scripts]
sdnaintegral = "sDNA.bin.sdnaintegral:main"
sdnaprepare = "sDNA.bin.sdnaprepare:main"
sdnalearn = "sDNA.bin.sdnalearn:main"
sdnapredict = "sDNA.bin.sdnapredict:main"


[tool.hatch.build.targets.wheel]
ignore-vcs = true
only-include = ["output/Release"]
artifacts = [
  "*.so",
  "*.dll",
]
sources = {"output/Release" = "sDNA"}

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

# [tool.hatch.build.targets.wheel.force-include]
# "output/Release"="sDNA"
