[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"


[project]
name = "sDNA_plus"
version = "5.0.0"
authors = [ {name = 'Crispin Cooper', email = 'sdna@cardiff.ac.uk'}, {name = "James Parrott", email = "james.parrott@proton.me"}]
description = "sDNA is a world leading tool for Spatial Design Network Analysis.  "
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3"
keywords = ["GIS", "Spatial Networks", "Urban planning"]
license = {file = "LICENSE.md"}
classifiers = [
    "Programming Language :: Python",
    "License :: OSI Approved :: AGPL-3.0-only",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
]
dynamic = ["dependencies", "optional-dependencies"]

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
learn = ["requirements-learn-predict.txt"]

[project.scripts]
sdnaintegral = "sDNA.bin.sdnaintegral:main"
sdnaprepare = "sDNA.bin.sdnaprepare:main"
sdnalearn = "sDNA.bin.sdnalearn:main"
sdnapredict = "sDNA.bin.sdnapredict:main"


[tool.hatch.build.targets.wheel]
ignore-vcs = true
only-include = ["output/Release"]
artifacts = [
  "*.so",
  "*.dll",
]
sources = {"output/Release" = "sDNA"}

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

